add chat instead of game prefix

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -4,6 +4,6 @@ server {
 
     location /chat/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /game/index.html;
+        try_files $uri $uri/ /chat/index.html;
     }
 }
