add chat instead of game prefix

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -2,8 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
-    location /chat/ {
+    location / {
         root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        index  index.html index.htm;
+        try_files $uri /index.html;
     }
 }
