--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -9,5 +9,5 @@ RUN npm run build
 
 FROM nginx:alpine
 RUN mkdir /app
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html/chat
 COPY nginx.conf /etc/nginx/conf.d/default.conf
