--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html;
+    location /chat/ {
+        root /usr/share/nginx/html/chat;
         index  index.html index.htm;
         try_files $uri /index.html;
     }
