--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -5,6 +5,6 @@ server {
     location /chat/ {
         root /usr/share/nginx/html/chat;
         index  index.html index.htm;
-        try_files $uri /index.html;
+        try_files $uri /chat/index.html;
     }
 }
