add chat instead of game prefix

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -4,7 +4,6 @@ server {
 
     location /chat/ {
         root /usr/share/nginx/html/chat;
-        index  index.html index.htm;
-        try_files $uri /chat/index.html;
+        try_files $uri $uri/ /chat/index.html;
     }
 }
