--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    location /chat/ {
-        try_files $uri $uri/ /chat/index.html;
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
