--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -6,4 +6,9 @@ server {
     location /chat/ {
         try_files $uri $uri/ /chat/index.html;
     }
+
+     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
+         expires 7d;
+         add_header Cache-Control "public, max-age=604800";
+     }
 }
